# geff

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  CONTRIBUTING.md  README.md  geff-schema.json  mkdocs.yml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  docs.yaml  gh-pages.yaml  test.yaml
bench/: data.js
docs/: api.md  specification.md
main/: 404.html  index.html  objects.inv  sitemap.xml
main/api/: index.html
main/command-line-tools/: index.html
main/reference/geff/: index.html
main/reference/geff/metadata_schema/: index.html
main/reference/geff/networkx/: index.html
main/reference/geff/networkx/io/: index.html
main/reference/geff/spatial_graph/: index.html
main/reference/geff/spatial_graph/io/: index.html
main/reference/geff/utils/: index.html
main/schema/: schema.html
main/search/: search_index.json
main/specification/: index.html
main/what-is-geff/: index.html
scripts/: export_json_schema.py
src/geff/: __init__.py  _cli.py  _path.py  _pytest_plugin.py  affine.py  dict_representation.py  geff_reader.py  io.py  io_utils.py  metadata_schema.py  supported_versions.yml  typing.py  units.py  utils.py  valid_values.py  version.py  write_arrays.py  write_dicts.py  writer_helper.py
src/geff/interops/: ctc.py  trackmate_xml.py
src/geff/networkx/: __init__.py  io.py
src/geff/rustworkx/: io.py
src/geff/spatial_graph/: __init__.py  io.py
src/geff/testing/: data.py
src/geff/validators/: segmentation_validators.py  validators.py
tests/: bench.py  conftest.py  test_basics.py  test_cli.py  test_geff_reader.py  test_io.py  test_io_utils.py  test_metadata_schema.py  test_overwrites.py  test_testing_data.py  test_utils.py  test_validators.py
tests/data/: FakeTracks.xml
tests/networkx/: test_nx_basics.py
tests/spatial_graph/: test_basics.py
tests/test_agnostic/: test_affine.py  test_dtype_validation.py  test_metadata_schema.py  test_utils.py  test_write_arrays.py  test_write_dicts.py  test_writer_helper.py
tests/test_docs/: test_specification_json.py
tests/test_interops/: test_ctc.py  test_trackmate_xml.py
tests/test_networkx/: test_missing_attrs.py  test_nx_basics.py  test_nx_missing_attrs.py
tests/test_rustworkx/: test_rx_basics.py  test_rx_missing_attrs.py
tests/test_spatial_graph/: test_basics.py  test_missing_attrs.py  test_sg_basics.py
tests/test_validators/: test_segmentation_validators.py
v0.0.0/: 404.html  index.html  sitemap.xml
v0.0.0/reference/geff/: index.html
v0.0.0/reference/geff/networkx/: index.html
v0.0.0/reference/geff/spatial_graph/: index.html
v0.0.0/reference/geff/spatial_graph/io/: index.html
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/reference/geff/: index.html
v0.1.0/reference/geff/metadata_schema/: index.html
v0.1.0/reference/geff/networkx/: index.html
v0.1.0/reference/geff/networkx/io/: index.html
v0.1.0/reference/geff/utils/: index.html
v0.1.0/schema/: schema.html
v0.1.0/search/: search_index.json
v0.1.0/specification/: index.html
v0.1.0/what-is-geff/: index.html
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/reference/geff/: index.html
v0.1.1/reference/geff/metadata_schema/: index.html
v0.1.1/reference/geff/networkx/: index.html
v0.1.1/reference/geff/networkx/io/: index.html
v0.1.1/reference/geff/utils/: index.html
v0.1.1/schema/: schema.html
v0.1.1/search/: search_index.json
v0.1.1/specification/: index.html
v0.1.1/what-is-geff/: index.html
v0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.2/reference/geff/: index.html
v0.1.2/reference/geff/metadata_schema/: index.html
v0.1.2/reference/geff/networkx/: index.html
v0.1.2/reference/geff/networkx/io/: index.html
v0.1.2/reference/geff/utils/: index.html
v0.1.2/schema/: schema.html
v0.1.2/search/: search_index.json
v0.1.2/specification/: index.html
v0.1.2/what-is-geff/: index.html
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/api/: index.html
v0.2.0/schema/: schema.html
v0.2.0/search/: search_index.json
v0.2.0/specification/: index.html
v0.2.0/what-is-geff/: index.html
v0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.1/api/: index.html
v0.2.1/schema/: schema.html
v0.2.1/search/: search_index.json
v0.2.1/specification/: index.html
v0.2.1/what-is-geff/: index.html
