[project]
name = "geff"
version = "0.1.0"
description = "Reference implementation of the Graph Exchange File Format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spatial-graph",
    "zarr<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov"
]

[tool.uv.sources]
spatial-graph = { git = "https://github.com/funkelab/spatial_graph", rev = "d02b691e4fa0f184871939a89c6f964bfd0f5e39" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
